--- a/node-mongo-compose/frontend/index.html
+++ b/node-mongo-compose/frontend/index.html
@@ -1,1 +1,99 @@
-<h1>Frontend</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cadastro Simples</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+</head>
+<body>
+    <div class="container">
+        <h1>Cadastro Simples</h1>
+        <hr>
+        <div>
+            <input name="id" type="hidden" />
+            <div class="form-group">
+                <label for="Name"></label>
+                <input class="form-control" type="text" name="name" placeholder="Digite o nome" />
+            </div>
+            <button class="btn btn-success" save>Salvar</button>
+        </div>
+
+        <table class="table" id="clients">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody id="clientRows">
+                <!-- DINAMIC CONTENT -->
+            </tbody>
+        </table>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+    <script>
+        const API = 'http://localhost:3000'
+
+        const createButton = (label, type) => {
+            return $('<button>').addClass(`btn btn-${type}`).html(label);
+        }
+
+        const renderRows = clients => {
+            const rows = clients.map(client => {
+                const updatedButton = createButton('Atualizar', 'warning')
+                const removeButton = createButton('Deletar', 'danger')
+                removeButton.click(() => removeClient(client))
+                updatedButton.click(() => loadClient(client))
+
+                return $('<tr>')
+                    .append($('<td>').append(client.name))
+                    .append($('<td>').append(updatedButton).append(removeButton))
+            })
+
+            $('#clientRows').html(rows)
+        }
+
+        const removeClient = client => {
+            $.ajax({
+                method: 'DELETE',
+                url: `${API}/clients/${client._id}`,
+                success: getClients
+            })
+        }
+
+        const loadClient = client => {
+            $('[name=id]').val(client._id)
+            $('[name=name]').val(client.name)
+        }
+
+        const getClients = () => {
+            $.ajax({
+                url: `${API}/clients`,
+                success: clients => {
+                    renderRows(clients)
+                    $('[name]').val('')
+                }
+            })
+        }
+
+        const saveClient = () => {
+            const _id = $('[name=id]').val()
+            const name = $('[name=name]').val()
+            $.ajax({
+                method: _id ? 'PUT': 'POST',
+                url: `${API}/clients/${_id}`,
+                data: _id ? {_id, name} : {name},
+                success: getClients
+            })
+        }
+
+        $(() => {
+            getClients()
+            $('[save]').click(saveClient)
+        })
+    </script>
+</body>
+</html>
